Ensure from two places that the CameraIconView does not access a CameraUI which has already executed its constructor (and deleted d etc.)

BUG: 181000

svn path=/trunk/extragear/graphics/digikam/; revision=912366